# OrbVis

./: .gitignore  Makefile  README.md  TODO.txt  meson.build
.github/workflows/: ci.yml
flatpak/: io.github.wojciech_graj.OrbVis.appdata.xml
lib/: meson.build
lib/cglm/: project.h
lib/hashmap_c/: hashmap.c  hashmap.h
lib/satcat/: LICENSE  satcat.c  satcat.h  satcat_code.c  satcat_code.h
lib/sgp4/: SGP4.c  SGP4.h  TLE.c  TLE.h
lib/stb_image/: stb_image.h
res/: gen_c.sh  meson.build
res/shader/: earth.frag  earth.vert  satellite.frag  satellite.vert  sky.frag  sky.vert  ui.frag  ui.vert
res/ui/: ui.glade  ui.glade~
src/: main.c  mainloop.c  mainloop.h  meson.build  version.h.in
src/core/: error.h  mem.c  mem.h  system.c  system.h  type.h
src/entity/: earth.c  earth.h  entity.c  entity.h  satellite.c  satellite.h  sky.c  sky.h
src/gfx/: bo.c  bo.h  camera.c  camera.h  error_gfx.c  error_gfx.h  gfx.c  gfx.h  idx_obj.c  idx_obj.h  render.c  render.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h
src/phys/: phys.c  phys.h
src/ui/: catalog.c  catalog.h  filter.c  filter.h  info.c  info.h  input.c  input.h  perf.c  perf.h  setting.c  setting.h  status.c  status.h  timeline.c~  timeline.h~  timemgr.c  timemgr.h  toolbar.c  toolbar.h  ui.c  ui.h
src/util/: download.c  download.h  icosphere.c  icosphere.h  model.c  model.h  satcat_code_list.c  satcat_code_list.h  thread.c  thread.h  version.h
util/: README_WIN.txt  winbuild.sh  wininit.sh  xxd.py
